IMP updates to contentful styling and blogs

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,6 +41,7 @@ const social = {
               <FontAwesomeIcon
                 icon={faGithub}
                 size="2x"
+                aria-label="GitHub"
                 aria-hidden="true"
                 client:load
               />
@@ -59,7 +60,7 @@ const social = {
               <FontAwesomeIcon
                 icon={faLinkedin}
                 size="2x"
-                alt="LinkedIn"
+                aria-label="LinkedIn"
                 aria-hidden="true"
                 client:load
               />
