--- a/src/styles/partials/_blog.scss
+++ b/src/styles/partials/_blog.scss
@@ -61,11 +61,11 @@
 
 // Post list item
 .post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-4);
+  margin-bottom: var(--spacing-2);
+  margin-top: var(--spacing-2);
   border-radius: var(--spacing-2);
-  border: 2px dashed #ccc;
-  padding: var(--spacing-2);
+  border: 2px dashed #ccccccae;
+  padding: var(--spacing-4);
   text-align: center;
 }
 
